Added Wire library wrapper and I2C_Detector logic into library

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=BitBang_I2C
-version=1.1.0
+version=1.2.0
 author=Larry Bank <bitbank@pobox.com>
 maintainer=Larry Bank <bitbank@pobox.com>
 sentence=Bit-bang the I2C protocol on any 2 GPIO pins on any system.
-paragraph=Includes special optimizations for AVR devices to allow clock speeds which meet or exceed normal I2C speeds.
+paragraph=A general purpose I2C wrapper library which can use the Wire library or bit-bang the I2C prototcol on any GPIO pins. Includes a function to identify common I2C devices and special optimizations for AVR devices to allow clock speeds which meet or exceed normal I2C speeds.
 category=Communication
 url=https://github.com/bitbank2/BitBang_I2C
 architectures=*
